--- a/HSPComplex/HSPComplex.vcxproj.filters
+++ b/HSPComplex/HSPComplex.vcxproj.filters
@@ -13,5 +13,24 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="ヘッダー ファイル\HSP">
+      <UniqueIdentifier>{3e50b5d7-c3bb-461a-9607-df6a8e36909f}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hsp3plugin.h">
+      <Filter>ヘッダー ファイル\HSP</Filter>
+    </ClInclude>
+    <ClInclude Include="hspvar_core.h">
+      <Filter>ヘッダー ファイル\HSP</Filter>
+    </ClInclude>
+    <ClInclude Include="hsp3struct.h">
+      <Filter>ヘッダー ファイル\HSP</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
