型定義部分完成

--- a/HSPComplex/HSPComplex.vcxproj
+++ b/HSPComplex/HSPComplex.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="hsp3plugin.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
