基本部分完成

--- a/HSPComplex/HSPComplex.vcxproj
+++ b/HSPComplex/HSPComplex.vcxproj
@@ -77,11 +77,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="hsp3plugin.cpp" />
+    <ClCompile Include="hspvar_complex.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="hsp3debug.h" />
     <ClInclude Include="hsp3plugin.h" />
     <ClInclude Include="hsp3struct.h" />
+    <ClInclude Include="hspvar_complex.h" />
     <ClInclude Include="hspvar_core.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
