--- a/HSPComplex/HSPComplex.vcxproj.filters
+++ b/HSPComplex/HSPComplex.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="calculate_complex.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hsp3plugin.h">
@@ -46,6 +49,9 @@
     </ClInclude>
     <ClInclude Include="hsp3debug.h">
       <Filter>ヘッダー ファイル\HSP</Filter>
+    </ClInclude>
+    <ClInclude Include="calculate_complex.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
